code cleanup changes